resolved video playback issue on Safari

--- a/project/css/memorial_interior.css
+++ b/project/css/memorial_interior.css
@@ -61,12 +61,15 @@
   transition: opacity 0.5s ease-in-out;
 }
 #testimony_media video {
-  position: relative;
+  position: absolute;
   left: 50%;
   transform: translate(-50%, 0%);
   height: 100%;
 }
-.testimony_portrait {
+#testimony_media div {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
